--- a/style.css
+++ b/style.css
@@ -254,3 +254,12 @@ img {
         top: 1400px;
     }
 }
+
+@media screen and (min-width: 600px) and (max-width: 1125px) {
+    button {
+        display: none;
+    }
+    img {
+        display: none;
+    }
+}
